--- a/Fast Furniture/css/dev/views/product.css
+++ b/Fast Furniture/css/dev/views/product.css
@@ -101,6 +101,7 @@
 
     .product-detail-list {
         float: left;
+        width: 30%;
     }
 
 
